[package]
name = "ttk91-rs"
version = "0.1.0-alpha.1"
authors = ["Mitja Karhusaari <mitja@karhusaari.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ttk91repl"
path = "bin/repl.rs"
required-features = ["ttk91repl"]

[[bin]]
name = "ttk91run"
path = "bin/run.rs"
required-features = ["ttk91run"]

[features]
tools = ["ttk91repl", "ttk91run"]
ttk91run = ["clap", "slog-term", "slog-async"]
ttk91repl = ["clap", "slog-term", "slog-async"]

[dependencies]
nom = "5"
nom_locate = "1"
clap = { version = "^2.33", optional = true }
slog = "2.5"
slog-term = { version = "*", optional = true }
slog-async = { version = "*", optional = true }
