[package]
name = "ttk91"
version = "0.1.0-alpha.1"
authors = ["Mitja Karhusaari <mitja@karhusaari.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "A parser, compiler and emulator library for the TTK91 instruction architecture."
license = "MIT"

[[bin]]
name = "ttk91repl"
path = "bin/repl.rs"
required-features = ["ttk91repl"]

[[bin]]
name = "ttk91run"
path = "bin/run.rs"
required-features = ["ttk91run"]

[features]
tools = ["ttk91repl", "ttk91run"]
ttk91run = ["clap", "slog-term", "slog-async"]
ttk91repl = ["clap", "slog-term", "slog-async"]

[dependencies]
nom = "5"
nom_locate = "1"
clap = { version = "^2.33", optional = true }
slog = "2.5"
slog-term = { version = "2.4.2", optional = true }
slog-async = { version = "2.3.0", optional = true }
logos = "0.11.4"
itertools = "0.9.0"
lazy_static = "1.4.0"
edit-distance = "2.1.0"

[dev-dependencies]
slog-term = { version = "2.4.2" }
slog-async = { version = "2.3.0" }
